--- a/src/template.css
+++ b/src/template.css
@@ -19,6 +19,7 @@ footer {
     padding: 20px;
     font-size: 15px;
     color: #333;
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
 }
   
 .payments {
